# nos-monitor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
deploy/openrc/: nos-monitor
deploy/systemd/: nos-monitor@.service
src/: config.rs  dedup.rs  liveness.rs  main.rs  metrics.rs  rpc.rs  ssh.rs  util.rs
src/alert/: mod.rs
src/detect/: mod.rs
src/logtail/: json_line.rs  mod.rs
